Query optimizations and new WorkoutSessionDTO implemented
