# src/main/java/com/kuba/gymtrackerapi/workoutsession/dto/WorkoutSessionExercisesDTO.java
@@ -1,14 +1,13 @@
 package com.kuba.gymtrackerapi.workoutsession.dto;
 
 import com.fasterxml.jackson.annotation.JsonFormat;
-import com.kuba.gymtrackerapi.trainingplan.dto.TrainingPlanDTO;
+import com.kuba.gymtrackerapi.trainingplan.dto.TrainingPlanWorkoutSessionExercisesDTO;
+
 import java.time.LocalDate;
 
-public record WorkoutSessionDTO(
+public record WorkoutSessionExercisesDTO(
         Long id,
         @JsonFormat(pattern = "dd/MM/yyyy") LocalDate date,
-        TrainingPlanDTO trainingPlan
-
+        TrainingPlanWorkoutSessionExercisesDTO trainingPlan
 ) {
-
 }
